Show mobile statistics on mobile version (bug 662818)

--- a/media/css/input-mobile.css
+++ b/media/css/input-mobile.css
@@ -292,7 +292,7 @@ a {
 .section .group .cell:last-child {
 	border-bottom: 0;
 }
-.section h2 {
+.section h2, .section .filter-group h3 {
 	background: -moz-linear-gradient(top, #f0f0f0, #dadada);
 	background: -webkit-gradient(linear, 0 top, 0 bottom, from(#f0f0f0), to(#dadada));
 	background: linear-gradient(top, #f0f0f0, #dadada);
@@ -339,7 +339,7 @@ a {
 		display: block;
 	}
 
-.filter-group h2 a {
+.filter-group h2 a, .filter-group h3 a {
     color: #000;
     display: block;
 }
